[project]
name = "kaggle-bitcoin"
version = "0.1.0"
description = ""
authors = [{ name = "mczielinski", email = "mczielinski@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pandas>=2.3.3,<3",
    "numpy>=2.2.6,<3",
    "jupyterlab>=4.6.1,<5",
    "kaggle>=1.7.4.5,<2",
]

[tool.hatch.build.targets.sdist]
include = ["kaggle_bitcoin"]

[tool.hatch.build.targets.wheel]
include = ["kaggle_bitcoin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
